--- a/lepiter/lepiter.properties
+++ b/lepiter/lepiter.properties
@@ -1,4 +1,6 @@
 {
 	"uuid" : "87a2e83e-81fe-0d00-aaa4-ac4006fd7c8f",
-	"schema" : "4.1"
+	"tableOfContents" : "8htbrdw84y3g09mm1n5keauvx",
+	"schema" : "4.1",
+	"databaseName" : "feenkcom/gtoolkit-bookmarks/lepiter"
 }
